src/objects/OMNI_User_Group__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <referenceTo>OMNI_Queue__c</referenceTo>
        <relationshipLabel>OMNI User Group</relationshipLabel>
        <relationshipName>User_Time_Table</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plan_Id__c</fullName>
        <label>Plan Id</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IL1</fullName>
                </value>
                <value>
                    <fullName>OK1</fullName>
                </value>
                <value>
                    <fullName>NM1</fullName>
                </value>
                <value>
                    <fullName>TX1</fullName>
                </value>
                <value>
                    <fullName>MT1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RowNumber__c</fullName>
        <label>RowNumber</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_User_Ids__c</fullName>
        <label>Selected User Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Users__c</fullName>
        <label>Selected Users</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Time_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Week_Days__c</fullName>
        <label>Week Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>OMNI User Group</label>
    <nameField>
        <displayFormat>OU-{0000}</displayFormat>
        <label>OMNI_User_Group</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OMNI User Group</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>